# ecal-mcp

./: .dockerignore  .gitignore  AGENT_SKILL.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  install.ps1  install.sh
.cursor/skills/run-ecal-gauntlet/: SKILL.md
.cursor/skills/run-ecal-gauntlet/prompts/: scenario.md  synthesis.md
.github/workflows/: ci.yml  install-test.yml  pages.yml  release.yml
docs/: TESTING.md
src/: cli.rs  main.rs
tests/: e2e.py  e2e_realnet.py
tests/gauntlet/: README.md  run_scenario.py
tests/gauntlet/scenarios/01_discovery/: docker-compose.yml  task.md
tests/gauntlet/scenarios/02_silent_topic/: docker-compose.yml  task.md
tests/gauntlet/scenarios/03_topic_typo/: docker-compose.yml  task.md
tests/gauntlet/scenarios/04_rate_drift/: docker-compose.yml  task.md
tests/gauntlet/scenarios/05_multi_replica_service/: docker-compose.yml  task.md
tests/gauntlet/scenarios/06_type_collision/: docker-compose.yml  task.md
tests/gauntlet/scenarios/07_no_common_transport/: docker-compose.yml  pub_no_tcp.yaml  sub_only_tcp.yaml  task.md
tests/gauntlet/scenarios/08_slow_callback_drops/: docker-compose.yml  task.md
tests/gauntlet/scenarios/09_dual_publishers_one_topic/: docker-compose.yml  task.md
tests/gauntlet/scenarios/10_typed_service_no_descriptors/: docker-compose.yml  task.md
tests/gauntlet/scenarios/shared/: ecal.yaml
tests/realnet/: docker-compose.yml  ecal.yaml
